# nics

./: COPYING  COPYING.GPL  Makefile.am  configure.ac
doc/: design.txt  ics-parsing.txt  internals.txt  locking.txt  memory.txt  patpat  pgn.txt  style12-examine.txt  style12-game  todo.txt
libmchess/: .cvsignore  AlgebraicParser.cc  AlgebraicParser.h  ChessGame.cc  ChessGame.h  ChessMove.cc  ChessMove.h  ChessMoveAlgebraic.cc  ChessMoveAlgebraic.h  ChessMoveCoordinateAlgebraic.cc  ChessMoveCoordinateAlgebraic.h  ChessPiece.cc  ChessPiece.h  ChessPosition.cc  ChessPosition.h  Makefile  Makefile.am  Makefile.in  PGNLexer.cc  PGNLexer.h  PGNLexer.ll  PGNParser.h  alg_parse.cc  alg_parse.h  alg_parse.yy  flex-bison  pgn_parse.cc  pgn_parse.h  pgn_parse.yy
libmchess/save/: PGNLexer.cc  PGNLexer.h  PGNLexer.ll  PGNParser.cc  PGNParser.h
nics/: .cvsignore  Chess.cc  Chess.h  Clock.cc  Clock.h  Filter.cc  Filter.h  FilterLexer.cc  FilterLexer.h  FilterLexer.ll  FilterParser.cc  FilterParser.h  FilterParser.yy  FilterParser.yy.old  FilterParserDefs.h  Game.cc  Game.h  GameFilter.cc  GameFilter.h  GameOffer.cc  GameOffer.h  Makefile  Makefile.am  Makefile.in  NICSCore.cc  NICSCore.h  NICSDatabase.cc  NICSDatabase.h  NICSGameManager.cc  NICSGameManager.h  NICSGuile.cc  NICSGuile.h  NICSLog.cc  NICSLog.h  NICSModule.cc  NICSModule.h  NICSNetwork.cc  NICSNetwork.h  NICSOfferManager.cc  NICSOfferManager.h  (+21 more)
nics/scm/: nics.scm
nics/sp/: Chess.cc  Chess.h  Clock.cc  Clock.h  Filter.h  Game.cc  Game.h  GameFilter.cc  GameFilter.h  GameOffer.cc  GameOffer.h  NICSCore.cc  NICSCore.h  NICSDatabase.h  NICSGameManager.cc  NICSGameManager.h  NICSLog.cc  NICSLog.h  NICSModule.h  NICSNetwork.cc  NICSNetwork.h  NICSSessionManager.cc  NICSSessionManager.h  NetworkListener.cc  NetworkListener.h  NetworkSession.cc  NetworkSession.h  PostgreSQL.cc  PostgreSQL.h  ReferenceCounted.h  SQLDatabase.h  SmartPointer.h  User.h  UserSession.cc  UserSession.h  UserSessionFICS.cc  UserSessionFICS.h  UserSessionFilter.cc  UserSessionFilter.h  UserSessionNICS.h  (+1 more)
nics/tests/: crafty.expect  crafty.sh  login.expect  play.expect  seek.expect  t.expect  t.fen  tell.expect  unrecognized-mate.pgn
sql/: schema.sql
tests/: Makefile.am
tests/libmchess/: Makefile.am  checkmate.pgn  declare_all.cc  pgntest.cc  pgntest.sh  stalemate.pgn
tests/libmchess/pgn/: Makefile  Makefile.am  Makefile.in  bf1970.expect  bf1970.pgn  bf1971.expect  bf1971.pgn  bf1972.expect  bf1972.pgn
tests/libmchess/pgn/.deps/: pgntest.P
tests/nics/: Makefile.am  clock.cc
